# nauti-controls

./: CMakeLists.txt  README.md  package.xml
data/: bbox_yaw_pitch_ctr_pid_params.yaml
launch/: bbox_controller.launch  bbox_yaw_pitch_controller_FollowDiver.launch  bbox_yaw_pitch_controller_FollowTag.launch  bbox_yaw_pitch_controller_RainbowTracker.launch  drp_yaw_pitch_controller.launch  pid_dyn_reconf.launch  pred_bbox_yaw_pitch_controller_FollowDiver.launch  reconfigure_drp_yaw_pitch_controller.launch  tag_detect.launch
msg/: TargetObservations.msg
scripts/: bbox_controller.py  bbox_yaw_pitch_controller.py  pid.py
